Set min required Java version to 8 #5